--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,11 @@
     box-sizing: border-box;
 }
 
+* a {
+    text-decoration: none;
+    color: #121212;
+}
+
 html,
 body {
     font-size: 18px;
@@ -67,6 +72,9 @@ body {
 }
 .main-container {
 }
+.main-body-fr {
+    margin-top: 55px;
+}
 .main-body {
     margin-top: 55px;
 	 display: flex;
@@ -80,6 +88,7 @@ body {
     line-height: 120%;
     max-width: 620px;
     margin-right: 245px;
+    margin-bottom: 48px;
 }
 .main-title span {
     font-family: 'Playfair Display', serif;
@@ -168,4 +177,46 @@ body {
 .main-body .main-wrapper {
 	display: flex;
 	flex-direction: column;
+}
+
+.main-block-wrapper {
+    display: flex;
+}
+
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
+}
+
+.firts {
+	background: #121212;
+}
+
+.second {
+	left: 16.6%;
+	background: #121212;
+}
+
+.third {
+	left: 33.2%;
+	background: #121212;
+}
+
+.four {
+	left: 49.8%;
+	background: #121212;
+}
+
+.five {
+	left: 66.6%;
+	background: #121212;
+}
+
+.six {
+	left: 83.2%;
+	background: #121212;
 }
